# draftoff

./: .env.example  .gitignore  PLAN.md  package-lock.json  package.json  pnpm-lock.yaml  sofifa_scrape.py  tsconfig.base.json
apps/server/: pyproject.toml
apps/server/scripts/: _core_colors_seed.py  compile_club_colors.py  generate_known_colors_data.py  known_colors_data.py  merge_club_colors.py  scrape_teamcolorcodes_strict.py  scrape_wikipedia_teams.py
apps/server/src/draftoff/: __init__.py  __main__.py  app.py  catalog_routes.py  confederations.py  draft.py  draft_engine.py  draft_timer.py  editions.py  fill_teams.py  filler_squads.py  formation.py  group_draw.py  handlers.py  match_sim.py  nation_match.py  pitch_scenes.py  pool.py  positions.py  post_draft.py  rating.py  realtime.py  seed.py  session_tracker.py  store.py  team_match.py  tournament.py
apps/server/src/draftoff/data/: competitions.json
apps/server/src/draftoff/db/: __init__.py  models.py  session.py
apps/server/src/draftoff_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/web/: next.config.mjs  package.json  tailwind.config.ts
sofifa_data/: progress.json  teams_070002.json  teams_080002.json  teams_090002.json  teams_100002.json  teams_110002.json  teams_120002.json  teams_130034.json  teams_140052.json  teams_150059.json  teams_160058.json  teams_170099.json  teams_180084.json  teams_190075.json  teams_200061.json  teams_210064.json  teams_220069.json  teams_230054.json  teams_240050.json  teams_250044.json  teams_260037.json
(+58 files in other folders)
